[package]
name = "PiMinecraftMusicPlayer"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
rand_distr = "0.5.1"
serde_json = "1.0.140"
chrono = "0.4.40"
chrono-tz = "0.10.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"], default-features = false}
dotenv = "0.15.0"
tokio = { version = "1.44.1", features = ["full"] }
error-chain = "0.12.4"
serde = { version = "1.0.219", features = ["derive"]}

[build-dependencies]
dotenv-build = "0.1.1"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-unknown-linux-gnu-gcc"
